--- a/progetto-esame/progetto-esame.csproj
+++ b/progetto-esame/progetto-esame.csproj
@@ -58,8 +58,11 @@
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data.cs" />
+    <Compile Include="Instant.cs" />
+    <Compile Include="Sensor.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="Triaxial.cs" />
+    <Compile Include="Window.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
