Ho rinominato la classe MatriceEventsArgs in window per avere un nome piu significativo

--- a/progetto-esame/progetto-esame.csproj
+++ b/progetto-esame/progetto-esame.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="MatriceEventArgs.cs" />
+    <Compile Include="Window.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
