--- a/progetto-esame/progetto-esame.csproj
+++ b/progetto-esame/progetto-esame.csproj
@@ -49,7 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analisi.cs" />
+    <Compile Include="Analyzer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
