Aggiunta di immagini

--- a/progetto-esame/progetto-esame.csproj
+++ b/progetto-esame/progetto-esame.csproj
@@ -56,6 +56,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Window.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
@@ -66,14 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -92,10 +92,10 @@
     <None Include="Resources\stickman-no-walk.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\stickman-walk.png" />
+    <None Include="Resources\stickman-sitting-down.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\stickman-laying-down.bmp" />
+    <None Include="Resources\stickman-laying-down.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
