--- a/progetto-esame/progetto-esame.csproj
+++ b/progetto-esame/progetto-esame.csproj
@@ -97,6 +97,9 @@
   <ItemGroup>
     <None Include="Resources\stickman-laying-down.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\stickman-walk.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
